--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/minesweeper
+spring.datasource.username=root
+spring.datasource.password=
 
+server.error.whitelabel.enabled=false
+
+spring.jpa.show-sql=true
