--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.error.whitelabel.enabled=false
 
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+spring.main.allow-bean-definition-overriding=true
