--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/minesweeper
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=MORFcar3420*
 
 server.error.whitelabel.enabled=false
 
+server.port=8000
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
