--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/minesweeper
-spring.datasource.username=root
-spring.datasource.password=MORFcar3420*
+spring.datasource.url=jdbc:mysql://db:3306/minesweeper
+spring.datasource.username=minesweeper
+spring.datasource.password=minesweeper
 
-server.error.whitelabel.enabled=false
-
-server.port=8000
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
+server.port=8080
 
 spring.main.allow-bean-definition-overriding=true
