--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/minesweeper
-spring.datasource.username=root
-spring.datasource.password=MORFcar3420*
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-server.error.whitelabel.enabled=false
+server.port=8080
 
-server.port=8000
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
+server.address=0.0.0.0
 
 spring.main.allow-bean-definition-overriding=true
